<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xarm_control</name>
  <version>0.0.0</version>
  <description>xArm7 control nodes: Cartesian planning and MoveIt Servo keyboard teleoperation</description>
  <maintainer email="brad@todo.todo">brad</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>std_srvs</depend>
  <depend>moveit_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_servo</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>xarm_msgs</depend>
  <depend>xarm_moveit_config</depend>
  <depend>xarm_controller</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
